# Simulator

./: BasicProcess.mdf  CMakeLists.txt  MetaDataAccess.c  OpQueue.c  README.md  StringUtils.h  build_and_test  config1.cnf  configAccess.c  configAccess.h  metadata3a.mdf  pa03.c  prepPCB.c  run  simController.c  simController.h  simtimer.c  simtimer.h  sysLog.c  test
Configurations/: Basic.cnf
Old Code/: MemManagement.c  MemManagement.h  MetaDataAccess.h  OpQueue.h  PA03_863166_mf  StringUtils.c  cpuScheduler.c  cpuScheduler.h  logfile_1 (2).lgf  prepPCB.h  simtimer.c  simtimer.h  sysLog.h
ctest/: CMakeLists.txt
ctest/headers/: tests.h
ctest/src/: sim_timer.laptimer.test.c  sim_timer.zerotimer.test.c
ctest/src/ConfigSystem/: config_system.init.deinit.test.c
ctest/src/TimerTests/: sim_timer.laptimer.test.c  sim_timer.zerotimer.test.c
data/config/: basic.cnf
data/meta/: basicprocess.mdf
src/: CMakeLists.txt  simulatorInit.c
src/ConfigReader/: CMakeLists.txt  ConfigReader.c  ConfigReader.h
src/ConfigSystem/: CMakeLists.txt  ConfigSystem.c  ConfigSystem.h
src/Logger/: CMakeLists.txt  logger.c  logger.h
src/SimulatedTimerSystem/: CMakeLists.txt  SimTimer.c  SimTimer.h
